--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "wind-framework/collector",
-    "description": "Wind framework base core.",
+    "description": "Wind framework process collector component.",
     "type": "library",
     "version": "0.1.0",
     "require": {
