--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,8 @@
     "name": "wind-framework/collector",
     "description": "Wind framework process collector component.",
     "type": "library",
-    "version": "1.0.0-dev",
     "require": {
-        "wind-framework/wind-framework": "1.0.0-dev"
+        "wind-framework/wind-framework": "1.0.x-dev"
     },
     "license": "Apache-2.0",
     "authors": [
